<resources>
    <string name="app_name">SelfieWars</string>
    <string name="user_name">Username</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="gender">Gender</string>
    <string name="continuee">Continue</string>
    <string name="logging_in">Loggin In</string>
    <string name="ranking">Ranking</string>
    <string name="score">Score</string>
    <string name="guess_it">Guess It</string>
    <string name="home">Home</string>
    <string name="rank">Rank</string>
    <string name="spin">Spin</string>
    <string name="store">Store</string>
    <string name="settings">Settings</string>
    <string name="pass">Pass</string>
    <string name="sound">Sound</string>
    <string name="vibration">Vibration</string>
    <string name="announcement">Announcement</string>

    <!-- TODO: Remove or change this    placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="score_equals">Score :</string>
    <string name="ranking_value">Ranking :#</string>
    <string name="announcement_title0">This week\'s award</string>
    <string name="announcement_description0">The prize is waiting for the winner of the week!</string>
    <string name="announcement_title1">Daily Award</string>
    <string name="announcement_description1">Daily award waiting for you</string>
    <string name="announcement_title2">Tıkla Yorum Yap 50 Elmas Kazan</string>
    <string name="announcement_description2">Play store üzerinden puanla. Ekran görüntüsünü selfiewarinfo@gmail.com
        adresine yolla 50 elmas kazan.
    </string>
    <string name="currency_type">$</string>
    <string name="default_web_lient_id">412883841103-oltcc80bcdoj4r0f3qknruh5elvvk1ed.apps.googleusercontent.com
    </string>
    <string name="Age">Age</string>


    <!-- TODo: Çeviri yapılmayacak olan stringler  Firebase -->
    <string name="account_State">accountstate</string>
    <string name="isReady">isReady</string>
    <string name="properties">properties</string>
    <string name="token">token</string>
    <string name="diamondValue">diamondValue</string>
    <string name="wildcards">wildcards</string>
    <string name="timestamp">timestamp</string>
    <string name="nowtimestamp">nowtimestamp</string>
    <string name="infodetail">infodetail</string>
    <string name="ApprovedUser">ApprovedUsers</string>
    <string name="CorrectUsers">CorrectUsers</string>
    <string name="photoUrl">photoUrl</string>
    <string name="spinValue">spinValue</string>
    <string name="Scores">Scores</string>
    <string name="WalletScores">WalletScores</string>
    <string name="Wallet">Wallet</string>
    <string name="spicAdsCount">spinAdsCount</string>
    <string name="loadingMessage">Kullanıcı Bilgileri Yükleniyor...</string>

    <!-- TODo: Ayarlar kısmı başlık ismi -->
    <string name="home_settings_title_follow">Follow</string>
    <string name="home_settings_title_updatetouserinfo">Update To User Profile</string>
    <string name="home_settings_title_useragreement">User Agreement</string>
    <string name="home_settings_title_sss">SSS</string>
    <string name="home_settings_title_logout">Logout</string>


    <!-- TODo: EndTime TextViewde gösterilcek kalan zaman terimleri -->
    <string name="hours">hours</string>
    <string name="minute">min</string>
    <string name="second">sec</string>
    <string name="Endtime">End Time :</string>
    <string name="Choose_Gender">Choose Gender</string>
    <string name="Gender_Male">Male</string>
    <string name="Gender_Female">Female</string>
    <string name="day_personal_information">day</string>
    <string name="month_personal_information">month</string>
    <string name="year_personal_information">year</string>

    <!-- TODo: UserSignInPopUpAlert -->
    <string name="sign_in_choose_image_alert_title">Notice</string>
    <string name="sign_in_choose_image_alert_desc">Make sure to enter the information correctly. Unsuited photos are
        rejected and your account may be permanently blocked
    </string>
    <string name="cekilis_dugum_adı">Cekilis</string>


</resources>
