<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/gradient_color"
        tools:context=".AuthUsersInfoActivity">

    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/camera"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:id="@+id/signin_info_profile_imageview" android:onClick="handlerInsertData"/>
    <TextView
            android:text=" Choose profile picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/signin_profile_desc_textView"
            android:textAlignment="center"/>
    <EditText android:layout_width="150dp"
              android:layout_height="50dp"
              android:textSize="20dp"
              android:singleLine="true"
              android:inputType="textPersonName"
              android:minLines="6"
              android:layout_marginTop="50dp"
              android:hint="@string/user_name"
              android:layout_gravity="center"
              android:id="@+id/signin_info_username_editText"/>
    <EditText
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:inputType="number"
            android:ems="10"
            android:maxLength="2"
            android:id="@+id/signin_info_age_editText"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/Age"/>
    <Button android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/continuee"
            android:background="@drawable/guess_it_and_game_button_oval"
            android:layout_gravity="center" android:layout_marginTop="16dp"
            android:id="@+id/signin_info_continue_button"/>


</LinearLayout>