<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SettingsActivity">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@drawable/gradient_color"
            android:layout_height="match_parent">
        <ImageView
                android:layout_width="40dp"
                android:layout_height="0dp"
                android:src="@drawable/backspaceicon"
                android:id="@+id/backspaceIcon" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="47dp"
                app:layout_constraintBottom_toTopOf="@+id/imageView19" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Settings"
                android:textSize="25dp"
                android:id="@+id/textView14" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="27dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout9" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:src="@drawable/line"
                app:layout_constraintTop_toBottomOf="@+id/backspaceIcon" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/imageView19" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="542dp"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="start"
                android:background="@drawable/gradient_color"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp" android:id="@+id/linearLayout9">

            <LinearLayout
                    android:id="@+id/followLinearLayout"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp">
                <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center"
                        android:background="@drawable/instagram"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/home_settings_title_follow"
                        android:textSize="20dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/updatetouserprofileLinearLayout"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_height="60dp">
                <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center"
                        android:background="@drawable/userinfoupdate"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/home_settings_title_updatetouserinfo"
                        android:textSize="20dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/useragreementLinearLayout"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_height="60dp">
                <ImageView
                        android:layout_width="45dp"
                        android:layout_gravity="center"
                        android:layout_height="45dp"
                        android:background="@drawable/agreement"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/home_settings_title_useragreement"
                        android:textSize="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/aboutLinearLayout"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_height="60dp">
                <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center"
                        android:background="@drawable/about"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/home_settings_title_about"
                        android:textSize="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/logoutLinearLayout"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_height="60dp">
                <ImageView
                        android:layout_width="45dp"
                        android:layout_gravity="center"
                        android:layout_height="45dp"
                        android:background="@drawable/logout"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/home_settings_title_logout"
                        android:textSize="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>


</RelativeLayout>