<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:src="@drawable/settings"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/imageView3" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                    android:text="@string/score_equals"
                    android:textSize="16dp"
                    android:textColor="@color/textcolor"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:id="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/imageView10"
                    app:layout_constraintStart_toEndOf="@+id/imageView10"
                    android:layout_marginStart="4dp" app:layout_constraintBottom_toBottomOf="@+id/imageView10"/>
            <TextView
                    android:text="0"
                    android:textSize="16dp"
                    android:textColor="@color/textcolor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/score_value" app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/textView2"
                    app:layout_constraintBottom_toBottomOf="@+id/textView2" app:layout_constraintVertical_bias="0.0"/>
            <TextView
                    android:text="@string/home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textcolor"
                    android:textSize="24sp"
                    android:id="@+id/textView4"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:gravity="center" android:layout_marginTop="8dp"/>
            <de.hdodenhof.circleimageview.CircleImageView android:layout_width="90dp" android:layout_height="90dp"
                                                          android:layout_marginTop="16dp"
                                                          app:layout_constraintTop_toBottomOf="@+id/textView4"
                                                          app:layout_constraintStart_toStartOf="@+id/textView4"
                                                          android:layout_marginStart="8dp"
                                                          android:id="@+id/circleImageView"
                                                          app:layout_constraintEnd_toEndOf="@+id/textView4"
                                                          android:src="@mipmap/ic_launcher_round"/>
            <TextView
                    android:text="@string/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/circleImageView"
                    app:layout_constraintEnd_toEndOf="@+id/circleImageView"
                    app:layout_constraintStart_toStartOf="@+id/circleImageView"/>
            <TextView
                    android:text="@string/ranking_value"
                    android:textColor="@color/textcolor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView5"
                    app:layout_constraintEnd_toEndOf="@+id/circleImageView"
                    app:layout_constraintStart_toStartOf="@+id/circleImageView" android:layout_marginEnd="16dp"/>
            <TextView
                    android:text="1500"
                    android:textColor="@color/textcolor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rank_value"
                    app:layout_constraintEnd_toEndOf="@+id/circleImageView"
                    app:layout_constraintTop_toTopOf="@+id/textView6"
                    app:layout_constraintBottom_toBottomOf="@+id/textView6" app:layout_constraintVertical_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/textView6" app:layout_constraintHorizontal_bias="0.0"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" android:id="@+id/linearLayout"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">
                <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="30dp">

                    <ImageView
                            android:src="@drawable/joker1"
                            android:layout_width="30dp"
                            android:layout_height="30dp" android:id="@+id/imageView8"
                            app:layout_constraintEnd_toStartOf="@+id/diamond_value2"
                            android:layout_marginEnd="8dp"
                            app:layout_constraintTop_toTopOf="@+id/diamond_value2"
                            app:layout_constraintBottom_toBottomOf="@+id/diamond_value2"/>
                    <TextView
                            android:text=":"
                            android:textColor="@color/textcolor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/diamond_equal3"
                            app:layout_constraintTop_toTopOf="@+id/imageView8"
                            app:layout_constraintBottom_toBottomOf="@+id/imageView8"
                            app:layout_constraintEnd_toStartOf="@+id/imageView8"/>
                    <TextView
                            android:text="8"
                            android:textColor="@color/textcolor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/diamond_value3"
                            app:layout_constraintEnd_toStartOf="@+id/diamond_equal3"
                            app:layout_constraintTop_toTopOf="@+id/diamond_equal3"
                            app:layout_constraintBottom_toBottomOf="@+id/diamond_equal3"/>
                    <ImageView
                            android:src="@drawable/joker2"
                            android:layout_width="30dp"
                            android:layout_height="30dp" android:id="@+id/imageView7"
                            app:layout_constraintEnd_toStartOf="@+id/diamond_value" android:layout_marginEnd="8dp"
                            app:layout_constraintBottom_toBottomOf="@+id/diamond_value"
                            app:layout_constraintTop_toTopOf="@+id/diamond_value"/>
                    <TextView
                            android:text=":"
                            android:textColor="@color/textcolor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/diamond_equal2"
                            app:layout_constraintBottom_toBottomOf="@+id/imageView7"
                            app:layout_constraintEnd_toStartOf="@+id/imageView7"
                            app:layout_constraintTop_toTopOf="@+id/imageView7"/>
                    <TextView
                            android:text="12"
                            android:textColor="@color/textcolor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/diamond_value2"
                            app:layout_constraintTop_toTopOf="@+id/diamond_equal"
                            app:layout_constraintBottom_toBottomOf="@+id/diamond_equal"
                            app:layout_constraintVertical_bias="1.0"
                            app:layout_constraintEnd_toStartOf="@+id/diamond_equal2"/>
                    <ImageView
                            android:src="@drawable/diamond"
                            android:textColor="@color/textcolor"
                            android:layout_width="30dp"
                            android:layout_height="30dp" android:id="@+id/imageView6"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="16dp" app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>
                    <TextView
                            android:text=":"
                            android:textColor="@color/textcolor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/diamond_equal" app:layout_constraintEnd_toStartOf="@+id/imageView6"
                            app:layout_constraintTop_toTopOf="@+id/imageView6"
                            app:layout_constraintBottom_toBottomOf="@+id/imageView6"/>
                    <TextView
                            android:text="100"
                            android:textColor="@color/textcolor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/diamond_value" app:layout_constraintEnd_toStartOf="@+id/diamond_equal"
                            app:layout_constraintTop_toTopOf="@+id/diamond_equal"
                            app:layout_constraintBottom_toBottomOf="@+id/diamond_equal"/>
                    <ImageView
                            android:src="@drawable/health"
                            android:layout_width="31dp"
                            android:layout_height="30dp"
                            android:id="@+id/imageView9" app:layout_constraintStart_toEndOf="@+id/textView10"
                            app:layout_constraintTop_toTopOf="@+id/textView10"
                            app:layout_constraintBottom_toBottomOf="@+id/textView10"/>
                    <TextView
                            android:text=":"
                            android:textColor="@color/textcolor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView10"
                            app:layout_constraintStart_toEndOf="@+id/health"
                            app:layout_constraintTop_toTopOf="@+id/health"
                            app:layout_constraintBottom_toBottomOf="@+id/health"
                            app:layout_constraintVertical_bias="0.0"/>
                    <TextView
                            android:text="8"
                            android:textColor="@color/textcolor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/health"
                            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>
                </android.support.constraint.ConstraintLayout>
            </LinearLayout>
            <ImageView
                    android:src="@drawable/scorecupimg"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/imageView10" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"/>
            <ImageView
                    android:src="@drawable/line"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:id="@+id/imageView11"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView11"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp" android:id="@+id/linearLayout2">
                <TextView
                        android:text="@string/announcement"
                        android:layout_marginLeft="5dp"
                        android:textSize="18dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView3"
                        android:textColor="@color/textcolor"
                        android:textStyle="bold"/>
                <android.support.constraint.ConstraintLayout
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/announcemen_shape"
                >

                    <ImageView
                            android:src="@drawable/mouse"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:id="@+id/imageView13"
                            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="24dp"
                            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
                            app:layout_constraintVertical_bias="1.0" android:maxWidth="120dp"
                            android:minHeight="120dp" app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="32dp"/>
                    <TextView
                            android:text="@string/announcement_title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textColor="@color/background"
                            android:id="@+id/announcement_title"
                            app:layout_constraintTop_toTopOf="@+id/imageView13"
                            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                            android:textAlignment="center" app:layout_constraintStart_toEndOf="@+id/imageView13"
                            android:layout_marginStart="8dp"/>
                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textColor="@color/background"
                            android:id="@+id/announcement_description"
                            android:text="@string/announcement_description" android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/announcement_title"
                            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                            app:layout_constraintStart_toEndOf="@+id/imageView13" android:layout_marginStart="8dp"/>
                </android.support.constraint.ConstraintLayout>

            </LinearLayout>
            <Button
                    android:text="@string/guess_it"
                    android:background="@drawable/guessit_button_oval"
                    android:layout_width="250dp"
                    android:layout_height="45dp"
                    android:id="@+id/button" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.76"/>
        </android.support.constraint.ConstraintLayout>
    </RelativeLayout>
</FrameLayout>